# mini-blockchain

./: LICENSE  README.md  pyproject.toml
chain/: __init__.py  block.py  blockchain.py  cli.py  hashing.py  wallet.py
tests/: test_blockchain.py  test_wallet.py
