[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-blockchain"
version = "0.1.0"
description = "Teaching-sized proof-of-work blockchain with Ed25519 wallets"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Mini Blockchain Contributors" }]
dependencies = ["cryptography>=41.0"]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
mini-blockchain = "chain.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chain*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
